Fixed most of the text overflow issues
Most of the text overflowing issues are fixed. This makes the website more pleasent to users with smaller screens (Still pretty ugly though).

--- a/public/css/game-creator.scss
+++ b/public/css/game-creator.scss
@@ -10,12 +10,14 @@ body {
     height: 100vh;
     width: 100vw;
     background-color: #0f4c75;
+    min-width: 450px;
 }
 
 .title-bar{
     position: sticky;
     top: 0;
-    height: $fontSize + .5rem;
+    // height: $fontSize + .5rem;
+    height: auto;
     background-color: #1b262c;
     padding: .5rem;
 
@@ -26,11 +28,14 @@ body {
     }
 
     .search-bar{
+        background-color: #223038;
         border: none;
         border-radius: 10px;
         height: $fontSize + .5rem;
         padding: 0 5px;
         font-size: $fontSize;
+        max-width: 30rem;
+        min-width: 5rem;
         &:focus {
             outline: none;
         }
@@ -45,17 +50,28 @@ body {
         margin: 0;
         list-style-type: none;
         li {
-            margin-bottom: .5rem;
+            p {
+                display: inline-block;
+                margin: 0;
+                margin-bottom: .5rem;
+                margin-right: 7.2rem;
+                word-break: break-all;
+                word-break: break-word;
+                padding: 0;
+            }
+            
             .create-game{
                 position: absolute;
                 right: .5rem;
                 background-color: #1b262c;
                 border: none;
                 border-radius: 10px;
-                padding: .2rem;
+                // padding: .2rem;
                 transition: background-color .2s ease-in-out;
+                text-align: center;
                 cursor: pointer;
                 user-select: none;
+                width: 6.2rem;
                 p{
                     margin: 0;
                     padding: 0;
